--- a/src/App.css
+++ b/src/App.css
@@ -45,6 +45,17 @@ tr:hover {background-color: #f5f5f5;}
   background-color: #eee;
 }
 
+.total{
+  background-color: dodgerblue;
+  text-align: right;
+  padding-right : 20px;
+}
+.total_text{
+  color :white;
+  padding-top : 5px;
+  padding-bottom : 5px;
+}
+
 input[type=submit] {
   padding:5px 15px; 
   background:dodgerblue; 
